--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="active_loans">Active Loans</string>
     <string name="bill_option_description">%1$s bill option</string>
     <string name="image_content_description">%1$s image</string>
-
+    <string name="nav_home">Home</string>
+    <string name="nav_search">Search</string>
+    <string name="nav_wallet">Wallet</string>
+    <string name="nav_profile">Profile</string>
 </resources>
